@@ -1,18 +1,30 @@
-## Getting Started
+# Aggie Find-It   (*cs371-fa2024-teamproject-lost-and-found*)
 
-Welcome to the VS Code Java world. Here is a guideline to help you get started to write Java code in Visual Studio Code.
+The Aggie Find-It (Lost and Found Assistant) is a centralized system designed to help NMSU students easily report, search for, and recover lost items on campus.
 
-## Folder Structure
+## Project description
 
-The workspace contains two folders by default, where:
+This platform streamlines the process of reporting lost items and makes it easier for students, faculty, and staff to find items that may have been misplaced or found around campus. It allows administrators to access the lost item database for ALL buildings on campus and the community to see a restricted version of thed atabase and submit lost item requests to further facilitate the retrieval of a lost item.
 
-- `src`: the folder to maintain sources
-- `lib`: the folder to maintain dependencies
+## Install
 
-Meanwhile, the compiled output files will be generated in the `bin` folder by default.
+To install, download the zip version of the github repository and decompress into a folder of your liking. 
 
-> If you want to customize the folder structure, open `.vscode/settings.json` and update the related settings there.
+## Usage
 
-## Dependency Management
+**NOTE: It is required to have JavaFX and MySQL installed to run this project**
 
-The `JAVA PROJECTS` view allows you to manage your dependencies. More details can be found [here](https://github.com/microsoft/vscode-java-dependency#manage-dependencies).
+TO compile and run, in your command prompt, go into the src folder directory and run the following commands:
+- `javac --module-path C:/path/to/JavaFX/lib --add-modules=javafx.controls,javafx.fxml,mysql-connector-j-8 com/Aggie_FindIt/*.java`
+- `java --module-path C:/path/to/JavaFx/lib --add-modules=javafx.base,javafx.graphics,javafx.controls,javafx.fxml.mysql-connector-j-8 -cp . com.Aggie_FindIt.Aggie_FindIt`
+
+## Contributors
+
+- Rupak Dey
+- Mario Saenz
+- Benjamin Widner III
+- Dimitreus Billey
+
+
+
+
